# Compute-Shader-NBody

./: CMakeLists.txt  README.md  compute_shader.c  core_basic_window.c  mesh_instancing.c  nbody.c  rcamera.h
resources/shaders/glsl430/: collision.comp  lighting.fs  lighting_instancing.vs  nbody.comp  test.comp  test_render.fs
